# sspp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SteadyState.py  main.py  pyproject.toml  python_bindings.cpp  requirements.txt  simple_binding.cpp  sspp.h
cmake/: ssppConfig.cmake.in
failed_dreams/: dspp.h
include/: Collision.h  EfficientSplineGradient.h  Gradient.h  SdfGradient.h  sspp.h  tsp.h  tsp_adapter_task_space_planner.h  tsp_collision_world.h  tsp_distribution.h  tsp_elites.h  tsp_path_model.h  tsp_planner.h  tsp_sampler.h  tsp_types.h  ui.h  utility.h  visu.h
include/sspp/: tsp.h  tsp_distribution.h  tsp_elites.h  tsp_evaluator.h  tsp_path_model.h  tsp_planner.h  tsp_sampler.h  tsp_types.h
mjcf/: planner.xml  stacking.xml
mjcf/robocrane/: robocrane.xml
scripts/: bspline_params.npy  main.py  main_bspline.py  main_tsp.py  plot_data.py
scripts/sdf_gradient/: main.py  plot.py
scripts/vpsto_benchmark/: README.md  benchmark_vpsto.py  hooks.py  icra_bench_vpsto.py  main.py
src/: main.cpp  main_icra_benchmark.cpp  main_tsp.cpp  main_tsp_benchmark.cpp  python_bindings.cpp  tsp_bindings.cpp  ui.cpp  visu.cpp
sspp/: BSplines.py  CMakeLists.txt  CubicPath.py  SteadyState.py  Timer.h  dspp.h  main.cpp  sspp.cpp  sspp.h
sspp/tests/: test_BSplines.py
