[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "sspp"  # The name of your package
version = "0.2"
description = "SSPP - Sampled Spline Path Planner Bindings for Python"
authors = [{name = "Gerald Ebmer", email = "gerald.ebmer@tuwien.ac.at"}]


[tool.setuptools.packages.find]
where = ["sspp"]  # Automatically include Python files in this folder


# This is useful if you want to add additional CMake, configuration files, or data files.
# [tool.scikit-build]
# include = [
#     "src/sspp/my_python_module.py", 
#     "src/sspp/__init__.py"
# ]
